--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 
@@ -5,17 +7,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Resume Uploader</title>
+    <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
 
-    <div class="container">
+    <div class="container mb-5">
+        <h1 class="text-center p-3 heading">Resume Uploader</h1>
+
         <div class="row">
 
             <div class="col-sm-8">
-                <form action="" method="POST" enctype="multipart/form-data">
+                <form action="" method="POST" enctype="multipart/form-data" class="shadow p-5">
                     {% csrf_token %}
 
                     {% for item in form %}
@@ -38,6 +43,10 @@
                     {% endif %}
 
                 </form>
+            </div>
+
+            <div class="col-sm-4">
+                <h4 class="text-center mb-3"><u>List of Candidates</u></h4>
             </div>
 
         </div>
